dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tests__ack_drains_inflight.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG setting up endpoint config.layout=WorkerLayout { frame_dispatch: 0, send: [0], recv_io: [0], recv_dispatch: [0], waker_drain: [0], background: 0 }
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG setting up endpoint config.layout=WorkerLayout { frame_dispatch: 0, send: [0], recv_io: [0], recv_dispatch: [0], waker_drain: [0], background: 0 }
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.000000000 DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:808:25
0:00:00.000000000 DEBUG Sent FlowInit with early data stream_id=0 bytes_read=128 is_fin=true
0:00:00.000521000 DEBUG FlowInit accepted - dispatched to acceptor attempt_id=0 stream_id=0 acceptor_id=1 server_queue_id=0
0:00:00.000521000 DEBUG Reader complete - all data consumed stream_id=0 final_size=Some(128) consumed_len=128
0:00:00.000521000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.000521000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.000521000 DEBUG Writer dropping stream_id=0 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=1048576
0:00:00.000521000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.000521000 DEBUG Reader dropping stream_id=0 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.001041000 DEBUG Reader complete - all data consumed stream_id=0 final_size=Some(128) consumed_len=128
0:00:00.001041000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.001041000 DEBUG Writer dropping stream_id=0 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=0
0:00:00.001041000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.001041000 DEBUG Reader dropping stream_id=0 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.001041000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.001041000 DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:808:25
0:00:00.001041000 DEBUG Sent FlowInit with early data stream_id=1 bytes_read=128 is_fin=true
0:00:00.001561000 DEBUG FlowInit accepted - dispatched to acceptor attempt_id=1 stream_id=1 acceptor_id=1 server_queue_id=1
0:00:00.001561000 DEBUG Reader complete - all data consumed stream_id=1 final_size=Some(128) consumed_len=128
0:00:00.001561000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.001561000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.001561000 DEBUG Writer dropping stream_id=1 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=1048576
0:00:00.001561000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.001561000 DEBUG Reader dropping stream_id=1 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.002081000 DEBUG Reader complete - all data consumed stream_id=1 final_size=Some(128) consumed_len=128
0:00:00.002081000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.002081000 DEBUG Writer dropping stream_id=1 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=0
0:00:00.002081000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.002081000 DEBUG Reader dropping stream_id=1 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.002081000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.002081000 DEBUG event=on_send_fin prev=FlowInitSent next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:808:25
0:00:00.002081000 DEBUG Sent FlowInit with early data stream_id=2 bytes_read=128 is_fin=true
0:00:00.002601000 DEBUG FlowInit accepted - dispatched to acceptor attempt_id=2 stream_id=2 acceptor_id=1 server_queue_id=2
0:00:00.002601000 DEBUG Reader complete - all data consumed stream_id=2 final_size=Some(128) consumed_len=128
0:00:00.002601000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.002601000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.002601000 DEBUG Writer dropping stream_id=2 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=1048576
0:00:00.002601000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.002601000 DEBUG Reader dropping stream_id=2 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.003121000 DEBUG Reader complete - all data consumed stream_id=2 final_size=Some(128) consumed_len=128
0:00:00.003121000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.003121000 DEBUG Writer dropping stream_id=2 status=FinSent next_offset=128 inflight_bytes=128 remote_max_data=0
0:00:00.003121000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.003121000 DEBUG Reader dropping stream_id=2 status=Complete final_size=Some(128) consumed_len=128 total_received_len=128 is_writing_complete=true is_reading_complete=true
0:00:00.003121000  INFO ack_drains_inflight passed
