dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@endpoint__tests__large_payload_transfer.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG setting up endpoint config.layout=WorkerLayout { frame_dispatch: 0, send: [0], recv_io: [0], recv_dispatch: [0], waker_drain: [0], background: 0 }
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG setting up endpoint config.layout=WorkerLayout { frame_dispatch: 0, send: [0], recv_io: [0], recv_dispatch: [0], waker_drain: [0], background: 0 }
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:805:21
0:00:00.000000000 DEBUG Sent FlowInit with early data stream_id=0 bytes_read=1363 is_fin=false
0:00:00.000521000 DEBUG FlowInit accepted - dispatched to acceptor attempt_id=0 stream_id=0 acceptor_id=1 server_queue_id=0
0:00:00.001041000 DEBUG poll_remote_budget received messages stream_id=0 status=FlowInitSent msg_count=1
0:00:00.001041000 DEBUG event=on_flow_established prev=FlowInitSent next=Open location=dc/s2n-quic-dc/src/stream/writer.rs:712:44
0:00:00.001041000 DEBUG Flow established stream_id=0
0:00:00.001041000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.001561000 DEBUG Reader complete - all data consumed stream_id=0 final_size=Some(4096) consumed_len=4096
0:00:00.001561000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.001561000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.001561000 DEBUG Writer dropping stream_id=0 status=FinSent next_offset=4096 inflight_bytes=4096 remote_max_data=1048576
0:00:00.001561000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.001561000 DEBUG Reader dropping stream_id=0 status=Complete final_size=Some(4096) consumed_len=4096 total_received_len=4096 is_writing_complete=true is_reading_complete=true
0:00:00.002081000 DEBUG Reader complete - all data consumed stream_id=0 final_size=Some(4096) consumed_len=4096
0:00:00.002081000 DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs:625:25
0:00:00.002081000  INFO large_payload_transfer passed
0:00:00.002081000 DEBUG Writer dropping stream_id=0 status=FinSent next_offset=4096 inflight_bytes=2733 remote_max_data=1049939
0:00:00.002081000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
0:00:00.002081000 DEBUG Reader dropping stream_id=0 status=Complete final_size=Some(4096) consumed_len=4096 total_received_len=4096 is_writing_complete=true is_reading_complete=true
